minor alignment fix for login

--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -24,8 +24,8 @@ h1 {
 
 .value-prop {
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 500;
   // opacity: 0.8;
 
   .highlight {
